build: use new GC and increase maximum stack size