@@ -15,4 +15,4 @@ RUN addgroup --gid 1001 --system app && \
   chmod 770 /app
 USER app:app
 COPY --chown=app:app --from=build /app/target/app.jar ./
-CMD java -jar app.jar
+CMD java -XX:+UseZGC -Xss10m -jar app.jar
